zoning district dataset w parameters

--- a/function_drafting.ipynb
+++ b/function_drafting.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "829ad092",
+   "id": "44a243f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "927b0118",
+   "id": "b64cc415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d718e6",
+   "id": "d7def62c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54fd7bea",
+   "id": "90812de9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lot_space(zoning_district, lot_width, lot_length):\n",
+    "def lot_floor_area(zoning_district, lot_width, lot_length):\n",
     "    lot_area = lot_width*lot_length\n",
     "    floor_area = far*lot_area\n",
     "    # \n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "309fcb08",
+   "id": "2320ea17",
    "metadata": {},
    "outputs": [],
    "source": [
