--- a/function_drafting.ipynb
+++ b/function_drafting.ipynb
@@ -13,14 +13,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b64cc415",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>District</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Specification</th>\n",
+       "      <th>Specification 2</th>\n",
+       "      <th>Min Lot Area (sq ft)</th>\n",
+       "      <th>Min Lot Width (ft)</th>\n",
+       "      <th>Min Rear Yard (ft)</th>\n",
+       "      <th>Lot Coverage Corner (%)</th>\n",
+       "      <th>Lot Coverage Other (%)</th>\n",
+       "      <th>FAR</th>\n",
+       "      <th>Min Base Height (ft)</th>\n",
+       "      <th>Max Base Height (ft)</th>\n",
+       "      <th>Max Building Height (ft)</th>\n",
+       "      <th>Num of Stories</th>\n",
+       "      <th>DU Factor</th>\n",
+       "      <th>Min Required Parking Basic (% of DU)</th>\n",
+       "      <th>Min Required Parking IRHU (% of IRHU)</th>\n",
+       "      <th>Min Tower Lot Coverage (%)</th>\n",
+       "      <th>Max Tower Lot Coverage (%)</th>\n",
+       "      <th>NOTES</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>R7</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>680</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>R7</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Mandatory Inclusionary Housing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>75</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>680</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R7</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>65</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>680</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>R7</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>680</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>R7</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Mandatory Inclusionary Housing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>60</td>\n",
+       "      <td>95</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>680</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  District Type                   Specification Specification 2  \\\n",
+       "0       R7    A                           Basic             NaN   \n",
+       "1       R7    A  Mandatory Inclusionary Housing             NaN   \n",
+       "2       R7    B                           Basic             NaN   \n",
+       "3       R7    D                           Basic             NaN   \n",
+       "4       R7    D  Mandatory Inclusionary Housing             NaN   \n",
+       "\n",
+       "   Min Lot Area (sq ft)  Min Lot Width (ft)  Min Rear Yard (ft)  \\\n",
+       "0                  1700                  18                  30   \n",
+       "1                  1700                  18                  30   \n",
+       "2                  1700                  18                  30   \n",
+       "3                  1700                  18                  30   \n",
+       "4                  1700                  18                  30   \n",
+       "\n",
+       "   Lot Coverage Corner (%)  Lot Coverage Other (%)  FAR  Min Base Height (ft)  \\\n",
+       "0                        1                    0.65  4.0                    40   \n",
+       "1                        1                    0.65  4.6                    40   \n",
+       "2                        1                    0.65  3.0                    40   \n",
+       "3                        1                    0.65  4.2                    60   \n",
+       "4                        1                    0.65  5.6                    60   \n",
+       "\n",
+       "   Max Base Height (ft)  Max Building Height (ft)  Num of Stories  DU Factor  \\\n",
+       "0                    65                      80.0             NaN        680   \n",
+       "1                    75                      90.0             9.0        680   \n",
+       "2                    65                      75.0             NaN        680   \n",
+       "3                    85                     100.0             NaN        680   \n",
+       "4                    95                     110.0            11.0        680   \n",
+       "\n",
+       "   Min Required Parking Basic (% of DU)  \\\n",
+       "0                                   0.5   \n",
+       "1                                   0.5   \n",
+       "2                                   0.5   \n",
+       "3                                   0.5   \n",
+       "4                                   0.5   \n",
+       "\n",
+       "   Min Required Parking IRHU (% of IRHU)  Min Tower Lot Coverage (%)  \\\n",
+       "0                                   0.15                         NaN   \n",
+       "1                                   0.15                         NaN   \n",
+       "2                                   0.25                         NaN   \n",
+       "3                                   0.15                         NaN   \n",
+       "4                                   0.15                         NaN   \n",
+       "\n",
+       "   Max Tower Lot Coverage (%) NOTES  \n",
+       "0                         NaN   NaN  \n",
+       "1                         NaN   NaN  \n",
+       "2                         NaN   NaN  \n",
+       "3                         NaN   NaN  \n",
+       "4                         NaN   NaN  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create dataframe WHERE:\n",
-    "# index = zoning districts\n",
-    "# columns = inputs (far, max_height, etc.)"
+    "res_dist = pd.read_csv('residential_zoning_districts.csv')\n",
+    "res_dist.head()"
    ]
   },
   {
@@ -51,7 +269,7 @@
     "def lot_floor_area(zoning_district, lot_width, lot_length):\n",
     "    lot_area = lot_width*lot_length\n",
     "    floor_area = far*lot_area\n",
-    "    # \n",
+    "    \n",
     "    return floor_area"
    ]
   },
@@ -63,8 +281,7 @@
    "outputs": [],
    "source": [
     "def num_units(zoning_district, lot_width, lot_length, type_of_unit):\n",
-    "    # \n",
-    "    # \n",
+    "    \n",
     "    return unit_count"
    ]
   }
