function_drafting annotations

--- a/function_drafting.ipynb
+++ b/function_drafting.ipynb
@@ -13,10 +13,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee93cf61",
+   "id": "47696fc7",
    "metadata": {},
    "source": [
-    "### import zoning district specifications"
+    "### Project Scope\n",
+    "* create a tool to simulate zoning change effects on potential space/housing units\n",
+    "\n",
+    "#### Next Steps:\n",
+    "* outline spatial calculation functions\n",
+    "* create dataset of zoning district specifications\n",
+    "* create static outputs (i.e. tables depicting \"current\" vs. \"hypothetical\" zoning regs.\n",
+    "* determine output format\n",
+    "\n",
+    "#### Potential Applications:\n",
+    "* modeling land use surrounding IBX development\n",
+    "* simulating an example neighborhood under various zoning conditions\n",
+    "    - e.g. East Midtown - focus on city's current areas of interest\n",
+    "    - low density: North Shore Staten Island\n",
+    "* simulating strategies to meet housing goal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ad9b5c8",
+   "metadata": {},
+   "source": [
+    "### Import zoning district specifications"
    ]
   },
   {
@@ -251,10 +273,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf3a66b",
+   "id": "973cd36a",
    "metadata": {},
    "source": [
-    "### calculation functions"
+    "### Import PLUTO sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ec60db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pluto = pd.read_csv()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ae8d93",
+   "metadata": {},
+   "source": [
+    "### Calculation functions"
    ]
   },
   {
@@ -264,7 +304,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lot_floor_area(zoning_district, lot_width, lot_length):\n",
+    "def lot_floor_area(res_dict, zoning_district, district_type, lot_width, lot_length):\n",
+    "    district = res_dict[res_dict['District']==zoning_district]\n",
+    "    district_type = district[district['Type']==district_type]\n",
+    "    \n",
     "    lot_area = lot_width*lot_length\n",
     "    floor_area = far*lot_area\n",
     "    \n",
@@ -285,15 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dad72777",
-   "metadata": {},
-   "source": [
-    "___________________________________________________________"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e7990b5",
+   "id": "e0158ce8",
    "metadata": {},
    "source": [
     "### archive:"
@@ -302,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120ef776",
+   "id": "deee04b9",
    "metadata": {},
    "outputs": [],
    "source": [
