--- a/function_drafting.ipynb
+++ b/function_drafting.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47696fc7",
+   "id": "6802e181",
    "metadata": {},
    "source": [
     "### Project Scope\n",
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad9b5c8",
+   "id": "a2daa56f",
    "metadata": {},
    "source": [
-    "### Import zoning district specifications"
+    "### Zoning District Specifications"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "b64cc415",
    "metadata": {},
    "outputs": [
@@ -261,40 +261,94 @@
        "4                         NaN   NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res_dist = pd.read_csv('residential_zoning_districts.csv')\n",
-    "res_dist.head()"
+    "zoning_districts = pd.read_csv('residential_zoning_districts.csv')\n",
+    "zoning_districts.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "973cd36a",
+   "id": "7d4cdac9",
    "metadata": {},
    "source": [
-    "### Import PLUTO sample"
+    "### PLUTO Sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0ec60db",
+   "execution_count": 3,
+   "id": "8d31d54c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\m_carper\\AppData\\Local\\Temp\\ipykernel_53276\\4044160878.py:1: DtypeWarning: Columns (21,22,24,26,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  pluto = pd.read_csv('pluto_22v3.csv')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(858619, 92)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pluto = pd.read_csv('pluto_22v3.csv')\n",
+    "pluto.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b90ba501",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4252, 92)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pluto_LES_sample = pluto[pluto['cd']==103]\n",
+    "pluto_LES_sample.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6b3dce46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pluto = pd.read_csv()"
+    "pluto_LES_sample.to_csv('pluto_22v3_sample_LES.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "06ae8d93",
+   "id": "723e139e",
    "metadata": {},
    "source": [
-    "### Calculation functions"
+    "### Calculation Functions"
    ]
   },
   {
@@ -304,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lot_floor_area(res_dict, zoning_district, district_type, lot_width, lot_length):\n",
+    "def lot_floor_area(zoning_districts, zoning_district, district_type, lot_width, lot_length):\n",
     "    district = res_dict[res_dict['District']==zoning_district]\n",
     "    district_type = district[district['Type']==district_type]\n",
     "    \n",
@@ -328,16 +382,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0158ce8",
+   "id": "2919d40c",
    "metadata": {},
    "source": [
-    "### archive:"
+    "### Archive"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deee04b9",
+   "id": "8454cc1b",
    "metadata": {},
    "outputs": [],
    "source": [
